# webgateway

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  run.sh
assets/: clipboard.css
backend/: Cargo.toml  Makefile.toml
backend/src/: main.rs  ws.rs
backend/src/agent/: agent.rs  mod.rs  remote.rs  resolver.rs  ws.rs
backend/src/user/: auth.rs
frontend/: Cargo.toml  Makefile.toml
frontend/src/: app.rs  lib.rs  utils.rs
frontend/src/components/: auth.rs  clipboard.rs  host.rs  input.rs  mod.rs  ws.rs
frontend/src/pages/: mod.rs  page_home.rs  page_remote.rs  page_ssh.rs  page_vnc.rs
frontend/src/protocal/: common.rs  mod.rs  vnc.rs
frontend/src/protocal/vnc/: mod.rs  vnc.rs  x11cursor.rs  x11keyboard.rs
frontend/static/: index.html  p404.html
frontend/www/: index.html  index.js
src/: app.rs  lib.rs
src/pages/: page_not_found.rs  page_ssh.rs
webrdp/: Cargo.toml  Makefile.toml
webrdp/assets/: rdp.html
webrdp/src/: canvas.rs  input.rs  lib.rs
webrdp/src/rdp/: mod.rs  rdp_impl.rs
webrdp/src/rdp/protocol/: ber.rs  x224.rs
webrdp/src/rdp/protocol/nla/: cssp.rs  ntlm.rs
webrdp/src/rdp_client/: rdp_impl.rs  x11keyboard.rs
webrdp/src/rdp_client/protocol/: ber.rs  mod.rs
webrdp/src/rdp_client/protocol/nla/: cssp.rs  mod.rs  ntlm.rs  rc4.rs
webrdp/src/rdp_ws/: mod.rs  rdp_client.rs  ws_bio.rs
webssh/: Cargo.toml  Makefile.toml
webssh/.cargo/: config
webssh/assets/: ssh.html
webssh/src/: lib.rs
webvnc/: Cargo.toml  Makefile.toml
webvnc/asserts/: clipboard.css  vnc.html
webvnc/src/: canvas.rs  lib.rs  utils.rs  x11cursor.rs
webvnc/src/vnc/: mod.rs  vnc.rs  vnc_impl.rs  x11cursor.rs  zlib.rs
webvnc/src/vnc/decoder/: zlib.rs  zrle.rs
webvnc/src/vnc_old/: mod.rs
webvnc/src/vnc_old/decoder/: mod.rs  raw.rs  tight.rs
www/: index.html  index.js  package-lock.json  package.json
