[package]
authors = [
    "Jovi Hsu <jv.hsu@outlook.com>"
]
categories = ["wasm", "web-programming", "sslvpn"]
description = ""
edition = "2021"
keywords = ["yew", "wasm", "wasm-bindgen", "web", "sslvpn"]
license = "GPL3"
name = "webgateway-be"
readme = "README.md"
version = "0.1.0"
repository = "https://www.github.com/HsuJv/webgateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "unwind"
opt-level = 0



[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true