[package]
authors = [
    "Jovi Hsu <jv.hsu@outlook.com>"
]
categories = ["wasm", "web-programming", "sslvpn"]
description = ""
edition = "2021"
keywords = ["yew", "wasm", "wasm-bindgen", "web", "sslvpn"]
license = "GPL3"
name = "webgateway-be"
readme = "README.md"
version = "0.1.0"
repository = "https://www.github.com/HsuJv/webgateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-session = "0.4"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-web-actors = "3.0.0"
urlencoding = "2.1.0"
serde_json = "1.0"

rand = "0.8"

# log systems
femme = "1.3"
log = "0.4"
async-log = "2.0.0"

[profile.dev]
panic = "unwind"
opt-level = 0

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true