[package]
authors = [
    "Jovi Hsu <jv.hsu@outlook.com>"
]
categories = ["wasm", "web-programming", "sslvpn"]
description = ""
edition = "2021"
keywords = ["yew", "wasm", "wasm-bindgen", "web", "sslvpn"]
license = "GPL3"
name = "webgateway-be"
readme = "README.md"
version = "0.1.0"
repository = "https://www.github.com/HsuJv/webgateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.13.0", feature="io-util"}
tokio-io = "0.1.13"
tokio-core = "0.1.18"
tokio-codec = "0.1.2"
tokio-util = "0.6.9"

actix = "0.12.0"
actix-session = "0.5.0-beta.3"
actix-web = "4.0.0-beta.10"
actix-files = "0.6.0-beta.8"
actix-web-actors = "4.0.0-beta.7"
actix-codec = "0.4"

urlencoding = "2.1.0"
bytes = "1.1.0"
serde = "1.0"
serde_json = "1.0"
trust-dns-resolver = "0.20"
rand = "0.8"
rustls = "0.20.0"

futures = "0.3.17"
futures-util= "0.3"

# log systems
femme = "1.3"
log = "0.4"
async-log = "2.0.0"

[profile.dev]
panic = "unwind"
opt-level = 0

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true