[package]
authors = [
    "Jovi Hsu <jv.hsu@outlook.com>"
]
categories = ["wasm", "web-programming", "sslvpn"]
description = ""
edition = "2021"
keywords = ["yew", "wasm", "wasm-bindgen", "web", "sslvpn"]
license = "GPL3"
name = "webgateway-fe"
readme = "README.md"
version = "0.1.0"
repository = "https://www.github.com/HsuJv/webgateway"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.18"
js-sys = "0.3.55"
web-sys = "0.3.55"
yew-router = "0.15"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }
serde_json = "1.0"
anyhow = "1.0"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.dev]
panic = "unwind"
opt-level = 0



[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true