[package]
name = "webvnc"
version = "0.1.0"
authors = ["Jovi Hsu <jv.hsu@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3"
flate2 = "1"
byteorder = "1"
# bytes="1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "CanvasRenderingContext2d",
    "Document",
    "ErrorEvent",
    "FileReader",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "ImageData",
    "Location",
    "KeyboardEvent",
    "MouseEvent",
    "MessageEvent",
    "ProgressEvent",
    "Window",
    "WebSocket",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
